--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9331,3 +9331,14 @@ footer.style-3 .footer-bottom .footer-logo-list li:hover img {
     outline: none;
     color: #3A46D1;
 }
+
+.nice-select.open .list{
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+.flag{
+    margin-right: 5px;
+    width: 20px !important;
+    height: 15px !important;
+}
