changes/ added icon & bg image to CategorySeeder

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6135,7 +6135,7 @@ footer.style-2 .footer-item .input-with-btn button {
 }
 
 footer.style-2 .footer-item .input-with-btn button:hover {
-    background: rgba(249, 57, 95, .9)
+    background: rgba(57, 143, 249, 0.9)
 }
 
 footer.style-2 .footer-item .input-with-btn button img {
