--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3317,7 +3317,7 @@ header.style-3 .mobile-menu-form input[type=text] {
 }
 
 .auction-card1 .auction-img .auction-timer .countdown h4 {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
     color: #444;
     margin-bottom: 0
@@ -3325,13 +3325,13 @@ header.style-3 .mobile-menu-form input[type=text] {
 
 @media(min-width:1200px) and (max-width:1399px) {
     .auction-card1 .auction-img .auction-timer .countdown h4 {
-        font-size: 22px
+        font-size: 18px
     }
 }
 
 @media(max-width:1199px) {
     .auction-card1 .auction-img .auction-timer .countdown h4 {
-        font-size: 20px
+        font-size: 18px
     }
 }
 
@@ -3344,7 +3344,8 @@ header.style-3 .mobile-menu-form input[type=text] {
     font-weight: 600;
     color: #1f2230;
     line-height: 1.4;
-    margin-top: -5px
+    margin-top: -5px;
+    height: 60px;
 }
 
 .auction-card1 .auction-content p {
