--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9432,3 +9432,12 @@ footer.style-3 .footer-bottom .footer-logo-list li:hover img {
     padding: 12px 30px;
     border-radius: 5px;
 }
+
+.avatar-img{
+    width: 50px !important;
+    border-radius: 50% !important;
+}
+
+.small-countdown-text{
+    font-size: 15px;
+}
