--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3317,7 +3317,7 @@ header.style-3 .mobile-menu-form input[type=text] {
 }
 
 .auction-card1 .auction-img .auction-timer .countdown h4 {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     color: #444;
     margin-bottom: 0
@@ -9439,5 +9439,5 @@ footer.style-3 .footer-bottom .footer-logo-list li:hover img {
 }
 
 .small-countdown-text{
-    font-size: 15px;
+    font-size: 15px !important;
 }
