added: admin payments index

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -11,6 +11,12 @@
     color: var(--primary-bg-color) !important;
 }
 
+.copy-text:hover{
+    cursor: pointer;
+    color: var(--primary-bg-color) !important;
+
+}
+
 .bid-filter{
     padding: 15px 45px 0px;
 }
