--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8937,7 +8937,7 @@ footer.style-3 .footer-bottom .footer-logo-list li:hover img {
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
+    height: 400px;
     text-align: center;
     -o-object-fit: cover;
     object-fit: cover;
